# CryptoTrack

./: .env.example  README.md  docker-compose.yaml  pyproject.toml
cryptotrack/: manage.py
cryptotrack/cryptoapp/: admin.py  models.py  parser.py
cryptotrack/cryptotrack/: asgi.py  settings.py  urls.py  wsgi.py
docs/: technical_specification.md
