[tool.poetry]
name = "crypto"
version = "0.1.0"
description = ""
authors = ["Никита Швейцер"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.5"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
psycopg = "^3.1.10"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
